Added gitignore and extra images. Almost there

--- a/Opdracht9/opdracht9.tex
+++ b/Opdracht9/opdracht9.tex
@@ -48,30 +48,46 @@ De wiskundige eigenschappen van dit getal worden als sinds de oudheid bestudeerd
 
 \section{Toepassingen}
 
-De guldens snede kun je overal tegenkomen. Het is te vinden in de verhoudingen van gebouwen, verhoudingen van gezicht, verhoudingen van bloemen, etc.. Er zijn mensen die geloven dat het begrip van schoonheid heel nauw met \(\varphi\) samenhangt. Bekende gebouwen die ontworpen zijn met de gulden snede als basis zijn bijvoorbeld de grote pyramide van Gizeh of het Parthenon in Athene. In Figuur \ref{fig:parthenon} is de gulden snede te zien in de ontwerp van de Parthenon. Op de afbeelding is de spiraal van Fibonacci te zien. Dit spiraal is gebaseerd op de Fibonacci reeks, een reeks die onstaat door de vorige twee getallen met elkaar op te tellen. De verhouding tussen elke getal en voorgaande getal komt uit heel erg in de buurt van de gulden snede. Door deze spiraal over de Parthenon te tekenen is het makkelijk om gulden snede bij elke onderdeel terugkomen.
+De guldens snede kun je overal tegenkomen. Het is te vinden in de verhoudingen van gebouwen, verhoudingen van gezicht, verhoudingen van bloemen, etc.. Er zijn mensen die geloven dat het begrip van schoonheid heel nauw met \(\varphi\) samenhangt. Bekende gebouwen die ontworpen zijn met de gulden snede als basis zijn bijvoorbeld de grote pyramide van Giza of het Parthenon in Athene. 
+
+In Figuur \ref{fig:parthenon} is de gulden snede te zien in het ontwerp van de Parthenon. Op de afbeelding is de spiraal van Fibonacci over de Parthenon getekend. Dit spiraal is gebaseerd op de Fibonacci reeks, een reeks die onstaat door de vorige twee getallen met elkaar op te tellen. De verhouding tussen elke getal en zijn voorgaande getal komt uit heel erg in de buurt van de gulden snede uit. Door deze spiraal over de Parthenon te tekenen is het makkelijk om gulden snede bij elke onderdeel terug te zien komen, bijvoorbeld de bovenkant van de zuilen en de base van de daklijn zijn in gulden snede proporties tot de hoogte van het gebouw. Verder is er in Figuur \ref{fig:parthenon-columns} de verhoudingen van de Parthenon in meer detaille te zien. De draagbalk op de zuilen is in gulden snede verhouding met de zuilen zelf. Ook heeft de draagbalk een lijn die het verdeelt in twee soorten decoraties. Deze twee gedeeltes zijn ook in de juiste verhouding met elkaar. Verder is de breedte van de zuilen ook in verhouding met de ruimte tussen de zuilen samen met de breedte van de volgende zuil. Maar de mooiste en duidelijkst voorbeeld van de \(\varphi\) verhouding in dit gebouw is te vinden in de draagbalk zelf. In Figuur \ref{fig:parthenon-beam} is de Fibonacci spiraal weer te zien, maar deze keer overlapt over de versieringen. In de afstanden en lengtes van alle componenten van de versieringen op de draagbalk is het duidelijk te zien dat de grieken heel goed hebben nagedacht over elke detaille en dat ze zeker bekend waren met de gulden snede.
 
 \begin{figure}[Hh]
     \centering
-    \begin{subfigure}[b]{0.5\textwidth}
-        \includegraphics[width=\textwidth]{gold08.jpg}
-		\caption{De parthenon.}
+    \begin{subfigure}[b]{0.55\textwidth}
+        \includegraphics[width=\textwidth]{parthenon.png}
+		\caption{De parthenon met de Fibonacci spiraal.}
 		\label{fig:parthenon}
-    \end{subfigure}%
-    ~ 
-    \begin{subfigure}[b]{0.5\textwidth}
-        \includegraphics[width=\textwidth]{pyramid.jpg}
-        \caption{De grote piramide van Gizeh.}
-        \label{fig:gizeh}
     \end{subfigure}
+    ~ 
+    \begin{subfigure}[b]{0.3\textwidth}
+        \includegraphics[width=\textwidth]{parthenon-columns.png}
+		\caption{De proporties van de zuilen.}
+		\label{fig:parthenon-columns}
+    \end{subfigure}%
+    ~
+	\begin{subfigure}[b]{0.45\textwidth}
+        \includegraphics[width=\textwidth]{parthenon-beam.png}
+		\caption{De proporties van de draagbalk.}
+		\label{fig:parthenon-beam}
+    \end{subfigure}%
     
-    \caption{De gulden snede in bouwkunsten.}
+    \caption{De gulden snede in de Parthenon.}
     \label{fig:animals}
 \end{figure}
 
-% \begin{figure}[Hh]
-% 	\includegraphics[width=0.6\textwidth]{gold08.jpg}
-% 	\caption{De verhouding tussen twee lengtes.}
-% 	\label{fig:ratio-lines}
-% \end{figure}
+De grote pyramide van Giza is gebaseerd op phi op een andere manier. Er is veel bewijs dat de pyramide gebaseerd is op drie verschillende wiskundige bases: Phi, de gulden snede, Pi, de relatie van de omtrek van een cirkel tot zijn diameter, en de stelling van Pythagoras, de stelling gebruikt om de lengte van een zijn van een driehoek uit te rekenen mits de lengtes van de 2 resterende zijdes bekend zijn. Phi is de enige getal waarbij zijn kwadraat gelijk is aan phi plus \'e\'en, ofwel \(\varphi + 1 = \varphi^2\) of \(1.618 + 1 = 2.168\). Door deze vergelijking te gebruiken is het mogelijk om een zogenaamd \texit{gulden driehoek} te construeren. Dit is een driehoek met de lengtes \(\sqrt{\varphi}\), \(\varphi\) en 1\)
+
+\begin{figure}[Hh]
+    \centering
+	\begin{subfigure}[b]{0.5\textwidth}
+        \includegraphics[width=\textwidth]{pyramid.jpg}
+        \caption{De grote piramide van Giza.}
+        \label{fig:giza}
+    \end{subfigure}
+    ~ 
+    \caption{De gulden snede in de grote pyramid van Giza.}
+    \label{fig:animals}
+\end{figure}
 
 \end{document}
